--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
       margin: 0;
       padding: 20px;
       background: linear-gradient(to Top, #a1f6ff, #ffffff);
+ }
+@media screen and (max-width: 768px) {
+  /* Styles for screens up to 768px wide (e.g., mobile phones) */
+}
 
-    }
     h1{margin-top: 0;
       text-decoration: ;
 text-shadow: -1px -1px 0 #000;
