--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@ transform: scale(1.1);
     <h2>Certifications</h2>
     <ul>
 
-    <li>Swacch Bharat Summer Internship 2018.<br><img src="Summerintern.jpg" alt="Certificate Thumbnail" class="thumbnail" id="certificate-thumbnail">
+    <li>Swacch Bharat Summer Internship 2018.<br><img src="SummerIntern.jpg" alt="Certificate Thumbnail" class="thumbnail" id="certificate-thumbnail">
 <div class="modal" id="modal">
     <span class="close" id="close">&times;</span>
-    <img src="Summerintern.jpg" alt="Certificate" class="modal-content" id="certificate-modal">
+    <img src="SummerIntern.jpg" alt="Certificate" class="modal-content" id="certificate-modal">
   </div></li>
 
     <li>National Certificate in Vocational Training for Computer Fundamentals by NCVT (2013-2014).<br><img src="NVCT.jpg" alt="Certificate Thumbnail" class="thumbnail" id="certificate-thumbnail">
