--- a/index.html
+++ b/index.html
@@ -157,6 +157,11 @@ p,li{font-size: 19px;}
 <img class="profile-picture" src="profilepic1.jpg" alt="Your Picture">
 
   <header>
+@media only screen and (max-width: 600px) {
+    .header {
+        padding: 10px;
+    }
+}
 <div class="content">
     <h1>Bharat Diwan</h1>
     <h2>Summary</h2>		
