--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ transform: scale(1.1)}
 
     .right-section {
       height: 920px; /* Set the height of the section */
-      background-color: #006265; /* Set the background color of the section */
+      background-color: #d4eefc; /* Set the background color of the section */
       position: absolute; /* Position the section absolutely */
       top: 128%; /* Align the top of the section with the middle of the viewport */
       right: 10%; /* Align the right side of the section with the right side of the viewport */
@@ -180,16 +180,21 @@ p,li{font-size: 19px;}
     <li><a href= "https://www.linkedin.com/in/bharat-diwan-b599a0215/">Linkedin Profile</a></li>	
 </ul>
 
-<ul class="special-head"><h2 class="special-head">Skills</h2>
+<ul class="special-head"><h2 class="special-head">Technical Skills</h2>
 <li>ChatGPT Prompt</li>
-      <li>Communication</li>
       <li>MS Office</li>
-      <li>Excelled in Google Sheets</li>
-      <li>MIS Report</li>
-	<li>Fluency in English & Hindi.</li>
+      <li>Google Workspace</li>
+      <li>Management Information System</li>
+	<li>Microsoft Power BI</li>
 	<li>Problem Solving, Confident, Motivated.</li>
 	<li>Team Player</li>
 </ul>
+<ul class="special-head"><h2 class="special-head">Soft Skills</h2>
+<li>Problem Solving</li>
+	<li>Communication</li>
+	<li>Leadership</li>
+	<li>Team Player</li>
+	<li>Customer Relations</li>
   </div>
 
   <div class="section">
@@ -235,6 +240,12 @@ p,li{font-size: 19px;}
 <div class="modal" id="modal">
     <span class="close" id="close">&times;</span>
     <img src="Summerintern.jpg" alt="Certificate" class="modal-content" id="certificate-modal">
+  </div></li>
+
+    <li>National Certificate in Vocational Training for Computer Fundamentals, NCVT (2013-2014).<br><img src="NVCT.jpg" alt="Certificate Thumbnail" class="thumbnail" id="certificate-thumbnail">
+<div class="modal" id="modal">
+    <span class="close" id="close">&times;</span>
+    <img src="NVCT.jpg" alt="Certificate" class="modal-content" id="certificate-modal">
   </div></li>
 
     <li>National Certificate in Vocational Training for Computer Fundamentals, NCVT (2013-2014).<br><img src="NVCT.jpg" alt="Certificate Thumbnail" class="thumbnail" id="certificate-thumbnail">
